# youtube-downloader

./: .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml  requirements.txt
tests/: test_downloader.py
youtube_downloader/: cli.py  config.py  downloader.py  utils.py
